; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/src/extr_win32_monitor.c__glfwPlatformGetGammaRamp.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/src/extr_win32_monitor.c__glfwPlatformGetGammaRamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_9__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [8 x i32] [i32 68, i32 73, i32 83, i32 80, i32 76, i32 65, i32 89, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_glfwPlatformGetGammaRamp(%struct.TYPE_8__* %0, %struct.TYPE_9__* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [768 x i32], align 16
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %4, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @CreateDCW(i8* bitcast ([8 x i32]* @.str to i8*), i32 %10, i32* null, i32* null)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = getelementptr inbounds [768 x i32], [768 x i32]* %6, i64 0, i64 0
  %14 = call i32 @GetDeviceGammaRamp(i32 %12, i32* %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @DeleteDC(i32 %15)
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %18 = call i32 @_glfwAllocGammaArrays(%struct.TYPE_9__* %17, i32 256)
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = getelementptr inbounds [768 x i32], [768 x i32]* %6, i64 0, i64 0
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  %24 = call i32 @memcpy(i32 %21, i32* %23, i32 512)
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds [768 x i32], [768 x i32]* %6, i64 0, i64 0
  %29 = getelementptr inbounds i32, i32* %28, i64 256
  %30 = call i32 @memcpy(i32 %27, i32* %29, i32 512)
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = getelementptr inbounds [768 x i32], [768 x i32]* %6, i64 0, i64 0
  %35 = getelementptr inbounds i32, i32* %34, i64 512
  %36 = call i32 @memcpy(i32 %33, i32* %35, i32 512)
  ret void
}

declare dso_local i32 @CreateDCW(i8*, i32, i32*, i32*) #1

declare dso_local i32 @GetDeviceGammaRamp(i32, i32*) #1

declare dso_local i32 @DeleteDC(i32) #1

declare dso_local i32 @_glfwAllocGammaArrays(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
